--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ p {
 header {
     background-color: #f6f5f5;
     height: 70px;
-    padding: 16px;
+    padding: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -81,7 +81,7 @@ header {
   }
 
   h1 {
-    font-size: 70pt;
+    font-size: 50pt;
     font-weight: bold;
     margin-bottom: 16px;
     text-align: start;
@@ -95,7 +95,7 @@ header {
     height: 500px;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     padding: 20px;
   }
@@ -109,6 +109,11 @@ header {
     height: 100%;
   }
 
+  p{
+    padding: 150px;
+    text-align: start;
+  }
+
   #button-presentation{
     width: 100%;
     display: flex;
@@ -116,12 +121,16 @@ header {
     justify-content: flex-start;
     align-items: center;
   }
+
   #images{
     width: 100%;
     height: 700px;
-    padding: 20px;
+    padding: 50px;
+    align-items: center;
   }
 
- 
+  .carousel, .carousel-inner > .carousel-item > img {
+    height: 650px;
+  }
 
 
